crud quiz dan question, generate gamepin

--- a/exploreAfterLogin.html
+++ b/exploreAfterLogin.html
@@ -44,6 +44,16 @@
           <i class="fas fa-search text-white ml-3" aria-hidden="true"></i>
         </div>
       </form>
+
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" onclick="allQuiz()">All Quizzes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" onclick="myQuiz()">My Quiz</a>
+        </li>    
+      </ul>
+
       
     </div>
     <!-- Collapsible content -->
