--- a/explore.html
+++ b/explore.html
@@ -215,8 +215,8 @@
       <div class="modal-body mx-3">
         <div class="md-form mb-5">
           <i class="fas fa-envelope prefix grey-text"></i>
-          <input type="email" id="defaultForm-email" class="form-control validate">
-          <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
+          <input type="text" id="defaultForm-username" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="defaultForm-username">Your username</label>
         </div>
 
         <div class="md-form mb-4">
@@ -294,6 +294,8 @@ aria-hidden="true">
 <script type="text/javascript" src="js/mdb.js"></script>
 
 <script src="/js/explore.js"></script>
+<script src="/js/login.js"></script>
+<script src="/js/register.js"></script>
 </body>
 
 </html>
